DSO linking fix

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 ADD_EXECUTABLE(solv solv.c)
-TARGET_LINK_LIBRARIES(solv satsolverext satsolver ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
+TARGET_LINK_LIBRARIES(solv satsolverext satsolver ${DB_LIBRARY} ${RPMIO_LIBRARY} ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
 
 install(TARGETS
     solv
