--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,10 +5,10 @@
 ADD_LIBRARY(toolstuff STATIC common_write.c)
 
 ADD_EXECUTABLE(rpmdb2solv rpmdb2solv.c)
-TARGET_LINK_LIBRARIES(rpmdb2solv toolstuff satsolverext satsolver ${RPMDB_LIBRARY} ${EXPAT_LIBRARY})
+TARGET_LINK_LIBRARIES(rpmdb2solv toolstuff satsolverext satsolver ${DB_LIBRARY} ${RPMIO_LIBRARY} ${RPMDB_LIBRARY} ${EXPAT_LIBRARY})
 
 ADD_EXECUTABLE(rpms2solv rpms2solv.c)
-TARGET_LINK_LIBRARIES(rpms2solv toolstuff satsolverext satsolver ${RPMDB_LIBRARY})
+TARGET_LINK_LIBRARIES(rpms2solv toolstuff satsolverext satsolver ${DB_LIBRARY} ${RPMIO_LIBRARY} ${RPMDB_LIBRARY})
 
 ADD_EXECUTABLE(rpmmd2solv rpmmd2solv.c)
 TARGET_LINK_LIBRARIES(rpmmd2solv toolstuff satsolverext satsolver ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
@@ -23,7 +23,7 @@ ADD_EXECUTABLE(updateinfoxml2solv updateinfoxml2solv.c)
 TARGET_LINK_LIBRARIES(updateinfoxml2solv toolstuff satsolverext satsolver ${EXPAT_LIBRARY})
 
 ADD_EXECUTABLE(deltainfoxml2solv deltainfoxml2solv.c)
-TARGET_LINK_LIBRARIES(deltainfoxml2solv toolstuff satsolverext satsolver ${EXPAT_LIBRARY})
+TARGET_LINK_LIBRARIES(deltainfoxml2solv toolstuff satsolverext satsolver ${DB_LIBRARY} ${EXPAT_LIBRARY})
 
 ADD_EXECUTABLE(repomdxml2solv repomdxml2solv.c)
 TARGET_LINK_LIBRARIES(repomdxml2solv toolstuff satsolverext satsolver ${EXPAT_LIBRARY})
@@ -35,13 +35,13 @@ ADD_EXECUTABLE(patchcheck patchcheck.c)
 TARGET_LINK_LIBRARIES(patchcheck satsolverext satsolver ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
 
 ADD_EXECUTABLE(dumpsolv dumpsolv.c )
-TARGET_LINK_LIBRARIES(dumpsolv satsolver)
+TARGET_LINK_LIBRARIES(dumpsolv satsolver ${DB_LIBRARY})
 
 ADD_EXECUTABLE(mergesolv mergesolv.c )
 TARGET_LINK_LIBRARIES(mergesolv toolstuff satsolverext satsolver)
 
 ADD_EXECUTABLE(findfileconflicts findfileconflicts.c)
-TARGET_LINK_LIBRARIES(findfileconflicts satsolverext satsolver ${RPMDB_LIBRARY})
+TARGET_LINK_LIBRARIES(findfileconflicts satsolverext satsolver ${DB_LIBRARY} ${RPMIO_LIBRARY} ${RPMDB_LIBRARY})
 
 install(TARGETS
     mergesolv
