--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,10 @@ IF ( NOT RPMDB_LIBRARY )
 FIND_LIBRARY(RPMDB_LIBRARY NAMES rpm)
 ENDIF( NOT RPMDB_LIBRARY )
 
+FIND_LIBRARY(RPMIO_LIBRARY NAMES rpmio)
+
+FIND_LIBRARY(DB_LIBRARY NAMES db)
+
 SET( PACKAGE "satsolver" )
 SET( VERSION "${LIBSATSOLVER_MAJOR}.${LIBSATSOLVER_MINOR}.${LIBSATSOLVER_PATCH}" )
 
