--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,8 @@ SET( DOC_INSTALL_DIR
 #SET (CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/ext ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/src SYSTEM )
 
+INCLUDE_DIRECTORIES( /opt/local/include/rpm/ )
+
 ####################################################################
 
 MESSAGE(STATUS "Looking modules in ${CMAKE_MODULE_PATH}")
