Fix for Apple's Perl installation, which includes these   "Locally applied patches: 	/Library/Perl/Updates/<version> comes before system perl directories 	installprivlib and installarchlib points to the Updates directory"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,12 @@ INCLUDE( ${CMAKE_SOURCE_DIR}/VERSION.cmake )
 FIND_PACKAGE(EXPAT REQUIRED)
 FIND_PACKAGE(Check REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
+FIND_PACKAGE(PERL)
+if ( APPLE )
+  FIND_PACKAGE(PerlLibsDarwin)
+else()
+  FIND_PACKAGE(PerlLibs)
+endif()
 
 IF ( FEDORA )
 MESSAGE(STATUS "Building for Fedora")
