--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,11 @@ SET( DOC_INSTALL_DIR
 #SET (CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/ext ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/src SYSTEM )
 
+find_path( RPM_INCLUDE_PATH NAMES rpm/rpmdb.h )
+if ( RPM_INCLUDE_PATH )
+  INCLUDE_DIRECTORIES( SYSTEM ${RPM_INCLUDE_PATH} ${RPM_INCLUDE_PATH}/rpm )
+endif()
+
 ####################################################################
 
 MESSAGE(STATUS "Looking modules in ${CMAKE_MODULE_PATH}")
